# yfinance-wrapper

./: .replit  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  app.py  contributing.md  main.py  pyproject.toml  replit.nix  requirements.txt
api/: __init__.py  app.py  config.py  routes.py  utils.py
api/static/css/: custom.css
api/static/js/: docs.js
api/templates/: docs.html
static/css/: custom.css
templates/: docs.html
