[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-caching>=2.3.0",
    "yfinance>=0.2.48",
    "flask-cors>=5.0.0",
    "pandas-ta>=0.3.14b0",
    "numpy>=2.1.3",
    "ta-lib",
    "pandas",
]
