[project]
name = "yahoo_finance_api"
version = "0.1.0"
description = "A REST API wrapper for Yahoo Finance data built with Flask"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-caching>=2.3.0",
    "yfinance>=0.2.48",
    "flask-cors>=5.0.0",
    "numpy>=2.1.3",
    "pandas>=2.1.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "."]

[project.scripts]
yahoo-finance-api = "main:app"

[project.urls]
Homepage = "https://github.com/yourusername/yahoo-finance-api"
Repository = "https://github.com/yourusername/yahoo-finance-api.git"

[tool.setuptools.package-data]
api = ["templates/*", "static/**/*"]
